--- a/ihdl/index.html
+++ b/ihdl/index.html
@@ -4,10 +4,26 @@
    <meta charset="UTF-8">
    <title></title>
 </head>
-<body>
+<body onload="test()">
 
 
 </body>
+<script src="./registers.js"></script>
 <script src="./hdl.js"></script>
+<script src="./multibit_hdl.js"></script>
 <script src="./alu.js"></script>
+
+
+<script>
+
+
+function test(){
+   console.log("Good job, your javascript is enabled!");   
+   console.log("Remember to do that before doing JS-development");
+   console.log("and figuring out why it wont work anymore.");   
+
+
+}
+
+</script>
 </html>
