Memory made better, program counter has issues.

--- a/ihdl/index.html
+++ b/ihdl/index.html
@@ -8,6 +8,7 @@
 
 
 </body>
+<script src="./memory.js"></script>
 <script src="./registers.js"></script>
 <script src="./hdl.js"></script>
 <script src="./multibit_hdl.js"></script>
