--- a/ihdl/index.html
+++ b/ihdl/index.html
@@ -9,10 +9,10 @@
 
 </body>
 <script src="./memory.js"></script>
-<script src="./registers.js"></script>
 <script src="./hdl.js"></script>
 <script src="./multibit_hdl.js"></script>
 <script src="./alu.js"></script>
+<script src="./instruction_set.js"></script>
 
 
 <script>
@@ -22,9 +22,9 @@ function test(){
    console.log("Good job, your javascript is enabled!");   
    console.log("Remember to do that before doing JS-development");
    console.log("and figuring out why it wont work anymore.");   
-
-
 }
+
+
 
 </script>
 </html>
