Get and set value to/from r0 works now.

--- a/ihdl/index.html
+++ b/ihdl/index.html
@@ -13,6 +13,7 @@
 <script src="./multibit_hdl.js"></script>
 <script src="./alu.js"></script>
 <script src="./instruction_set.js"></script>
+<script src="./helpers.js"></script>
 
 
 <script>
