Programming the memory works.

--- a/ihdl/index.html
+++ b/ihdl/index.html
@@ -6,6 +6,29 @@
 </head>
 <body onload="test()">
 
+<textarea id="binary_input">
+0010
+0000
+0110
+1111
+0010
+1001
+0000
+0000
+0000
+0000
+0001
+0001
+1100
+0011
+0000
+0111
+0001
+0001
+1100
+</textarea>
+<button onclick="program()">Program</button>
+<p id="testi"></p>
 
 </body>
 <script src="./memory.js"></script>
@@ -14,7 +37,7 @@
 <script src="./alu.js"></script>
 <script src="./instruction_set.js"></script>
 <script src="./helpers.js"></script>
-
+<script src="./simulator.js"></script>
 
 <script>
 
