Now every instruction set takes 4-bit arrays as parameters.

--- a/ihdl/index.html
+++ b/ihdl/index.html
@@ -27,8 +27,13 @@
 0001
 1100
 </textarea>
+<br>
 <button onclick="program()">Program</button>
+<br>
 <button onclick="simulate_one_tick()">Simulate one Cycle</button>
+<br>
+<button onclick="update_values()">Update values</button>
+<br>
 <p id="testi"></p>
 
 
